--- a/templates/d3.html
+++ b/templates/d3.html
@@ -120,11 +120,8 @@ var nodes = data.nodes
 
 var links = data.links.map(d => Object.create(d));
 
-var nodes2 = data3.nodes
+//var nodes2 = data3.nodes
 
-var links2 = data2.links.map(d => Object.create(d));
-//links = data3.links;
-console.log("links", links, "nodes", nodes, "links2", links2, "nodes2", nodes2);
 //console.log("test", links_data);
 var margin = {top: 30, right: 20, bottom: 30, left: 30},
     width = 800 - margin.left - margin.right,
@@ -167,7 +164,7 @@ var svg = d3.select('svg')
 var array = Object.values(nodes); //transform object to array
 var y = d3.scaleLinear()
   .domain([0,d3.max(array, function(d) {
-    return d.outDegree})]) //set max domain dynamically
+    return d.inDegree})]) //set max domain dynamically
   .range([height,margin.top])
   // Add the y Axis
   svg.append("g")
@@ -201,7 +198,7 @@ simulation
     return scale(parseDate(d.date));
     }))
     .force("y", d3.forceY().y(function(d) {
-    return y(d.outDegree);
+    return y(d.inDegree);
     }));
 //draw circles for the nodes 
 
@@ -351,7 +348,7 @@ function tickActions() {
           return scale(parseDate(d.date)); })
         .attr("cy", function(d) { 
           //console.log(d.relevancy)
-          return y(d.outDegree); });
+          return y(d.inDegree); });
 
         //  node
         // .attr("cx", function(d) { 
@@ -368,13 +365,13 @@ function tickActions() {
         .attr("x1", function(d) { 
           //console.log("d.source.date", d.source.date)
           return scale(parseDate(d.source.date)); })
-        .attr("y1", function(d) { return y(d.source.outDegree); })
+        .attr("y1", function(d) { return y(d.source.inDegree); })
         .attr("x2", function(d) { return scale(parseDate(d.target.date)); })
-        .attr("y2", function(d) { return y(d.target.outDegree); });
+        .attr("y2", function(d) { return y(d.target.inDegree); });
     
     label
         .attr("x", function(d) { return scale(parseDate(d.date))-20; })
-        .attr("y", function (d) { return y(d.outDegree)-15; })
+        .attr("y", function (d) { return y(d.inDegree)-15; })
 
         // label
         // .attr("x", function(d) { return d.x; })
