--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
 </head>
 <style type="text/css">
 
-  #viz {
+#viz {
     position:absolute;
   }
 body {
@@ -23,7 +23,6 @@ body {
 }
 .axis { 
   font: 9px sans-serif; 
-  text-anchor: start;
   stroke: "#000";
   }
 
@@ -36,7 +35,7 @@ body {
   stroke: gray;
 }
 
-.axis text{
+text{
   fill: gray;
 } 
 
@@ -102,6 +101,15 @@ Kein Erfordernis einer Ermächtigung durch ein übergeordnetes Organ, wenn der s
     <div class="col-lg-9 col-md-9">
   <!--     <h3>Visualisation</h3> -->
       <div id="viz">
+    <!--     <div class="form-check form-check-inline">
+          <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="geschlecht">
+          <label class="form-check-label" for="inlineCheckbox1">Geschlecht</label>
+        </div>
+      <div class="form-check form-check-inline">
+        <input class="form-check-input" type="checkbox" id="inlineCheckbox2" value="kanton">
+        <label class="form-check-label" for="inlineCheckbox2">Kanton</label>
+      </div> -->
+      <select id="selectButton"></select>
         <svg></svg>
       </div>
     </div>
