--- a/templates/noResult.html
+++ b/templates/noResult.html
@@ -72,8 +72,8 @@ div.tooltip {
 <body>
 
 <div class="container-fluid">
+  <h1> <b> SWISS COURT DECISIONS </b></h1>
   <div class="page-header">
-     <h1> <b> SWISS COURT DECISIONS </b></h1>
      <form method = "POST">
          <p><input placeholder = "choose keyword mord or diebstahl" type = "text" name = "Name" id="search"/></p>
         <!--     this moves the submit button veery far away -->
@@ -85,42 +85,13 @@ div.tooltip {
   </div>
   <div class="row">
     <div class="col-lg-3 col-md-3">
-      <h3>Stichwort</h3>
-      <p id="stichwort" >{{d[2] | safe }}</p>
-      <h3>Urteil</h3>
-      <p id="urteil">{{d[0][0].id | safe }}</p>
-      <h3>Jahr</h3>
-      <p id="jahr">1969-12-5</p>
-      <h3>Kanton</h3>
-      <p id="kanton"></p>
-      <h3>Anzahl Zitierungen</h3>
-      <p id="cit"></p>
-      <h3>Regeste</h3>
-      <p id="regeste">Art. 718a und Art. 718b OR; Gültigkeit von Rechtsgeschäften bei Interessenkonflikten.
-Kein Erfordernis einer Ermächtigung durch ein übergeordnetes Organ, wenn der sich in einem Interessenkonflikt befindende Vertreter der Gesellschaft zugleich Alleinaktionär ist (E. 5; Bestätigung der Rechtsprechung).</p>
-    </div>
+      <p> Sorry, this is just a prototype and your query was not found yet. Try again by typing one of the suggested keywords "mord" or "diebstahl"</p>
+ 
     <div class="col-lg-9 col-md-9">
-  <!--     <h3>Visualisation</h3> -->
-      <div id="viz">
-    <!--     <div class="form-check form-check-inline">
-          <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="geschlecht">
-          <label class="form-check-label" for="inlineCheckbox1">Geschlecht</label>
-        </div>
-      <div class="form-check form-check-inline">
-        <input class="form-check-input" type="checkbox" id="inlineCheckbox2" value="kanton">
-        <label class="form-check-label" for="inlineCheckbox2">Kanton</label>
-      </div> -->
-      <select id="selectButton"></select>
-        <svg></svg>
-      </div>
     </div>
   </div>
 </div>
-<script type="text/javascript">
-  var data = {{d | safe}};
-  
-  
-</script>
+
 
 </body>
 <script src="{{ url_for('static', filename='graph.js') }}"></script>
