--- a/templates/index.html
+++ b/templates/index.html
@@ -109,7 +109,7 @@ Kein Erfordernis einer Ermächtigung durch ein übergeordnetes Organ, wenn der s
     <div class="col-lg-9 col-md-9">
   <!--     <h3>Visualisation</h3> -->
    <div class="row">
-      <div  class="col-lg-6 col-md-6" style="background:white">
+      <div  class="col-lg-6 col-md-6">
     <!--     <div class="form-check form-check-inline">
           <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="geschlecht">
           <label class="form-check-label" for="inlineCheckbox1">Geschlecht</label>
@@ -123,7 +123,7 @@ Kein Erfordernis einer Ermächtigung durch ein übergeordnetes Organ, wenn der s
         <svg></svg>
 
       </div>
-      <div  class="col-lg-6 col-md-6" style="background:white">
+      <div  class="col-lg-6 col-md-6">
         <h5>Location of court descisions</h5>
         <svg id="map"></svg>
       </div>
